--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Programming Club at Florida Poly's Discord server bot",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "author": "Jose Placeres",
   "license": "ISC",
